# gan_attack_flower

./: .gitignore  README.md  pyproject.toml
gan_attack_flower/: attack.py  client_app.py  server_app.py  task.py
